--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1515,7 +1515,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2018-05-26
+Latest      : 2018-06-29
 
 Compiler    : Nim &gt;= 0.18.x dev branch
 
@@ -1725,8 +1725,12 @@ rndSample returns one rand sample from a sequence
 <dd>
 <p>reverseString</p>
 <p>reverses chars in a word</p>
-<blockquote><p>var s = &quot;A text to reverse could be this example 12345.0&quot; echo &quot;Original      : &quot; &amp; s echo &quot;reverseText   : &quot; &amp; reverseText(s) echo &quot;reverseString : &quot; &amp; reverseString(s) # check if back to original is correct assert s == reverseString(reverseString(s))</p></blockquote>
-
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">s</span> <span class="Operator">=</span> <span class="StringLit">&quot;A text to reverse could be this example 12345.0&quot;</span>
+<span class="Identifier">echo</span> <span class="StringLit">&quot;Original      : &quot;</span> <span class="Operator">&amp;</span> <span class="Identifier">s</span>
+<span class="Identifier">echo</span> <span class="StringLit">&quot;reverseText   : &quot;</span> <span class="Operator">&amp;</span> <span class="Identifier">reverseText</span><span class="Punctuation">(</span><span class="Identifier">s</span><span class="Punctuation">)</span>
+<span class="Identifier">echo</span> <span class="StringLit">&quot;reverseString : &quot;</span> <span class="Operator">&amp;</span> <span class="Identifier">reverseString</span><span class="Punctuation">(</span><span class="Identifier">s</span><span class="Punctuation">)</span>
+<span class="Comment"># check if back to original is correct</span>
+<span class="Identifier">assert</span> <span class="Identifier">s</span> <span class="Operator">==</span> <span class="Identifier">reverseString</span><span class="Punctuation">(</span><span class="Identifier">reverseString</span><span class="Punctuation">(</span><span class="Identifier">s</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="createSeqBool"><a name="createSeqBool,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">createSeqBool</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">10</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">bool</span><span class="Other">]</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
@@ -1829,14 +1833,14 @@ rndSample returns one rand sample from a sequence
 <dt id="seqLeft"><a name="seqLeft,seq[T],int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">seqLeft</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">it</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
 <dd>
 <p>seqLeft</p>
-<p>returns a new seq with n left end elements of the original seq </p>
+<p>returns a new seq with n left end elements of the original seq</p>
 
 
 </dd>
 <dt id="seqRight"><a name="seqRight,seq[T],int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">seqRight</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">it</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
 <dd>
 <p>seqRight</p>
-<p>returns a new seq with n right end elements of the original seq </p>
+<p>returns a new seq with n right end elements of the original seq</p>
 
 
 </dd>
@@ -2081,7 +2085,7 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 <dt id="cxpdx"><a name="cxpdx,int,string,string"></a><pre><span class="Keyword">func</span> <span class="Identifier">cxpdx</span><span class="Other">(</span><span class="Identifier">padLen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">spaces</span><span class="Other">(</span><span class="DecNumber">1</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>pdx</p>
-<p>same as cxpad but with padding char count in front </p>
+<p>same as cxpad but with padding char count in front</p>
 
 
 </dd>
@@ -2097,7 +2101,7 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>cxlpdx</p>
-<p>same as cxpad but with padding char count in front </p>
+<p>same as cxpad but with padding char count in front</p>
 
 
 </dd>
@@ -2118,7 +2122,7 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 <dl class="item">
 <dt id="styledEchoPrint"><a name="styledEchoPrint.m,varargs[untyped]"></a><pre><span class="Keyword">macro</span> <span class="Identifier">styledEchoPrint</span><span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">untyped</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">typed</span></pre></dt>
 <dd>
-partially lifted from an earler macro in terminal.nim and removed new line
+partially lifted from an earler macro in terminal.nim and removed new line #  improvements by araq to avoid the now deprecated callsite()
 
 </dd>
 
@@ -2149,12 +2153,12 @@ returns input string  n times mimicking python
 </dd>
 <dt id="tw"><a name="tw.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">tw</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
 <dd>
-tw , a global where latest terminal width is always available 
+tw , a global where latest terminal width is always available
 
 </dd>
 <dt id="th"><a name="th.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">th</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
 <dd>
-th , a global where latest terminal height is always available 
+th , a global where latest terminal height is always available
 
 </dd>
 <dt id="doSomething"><a name="doSomething.t,int,untyped"></a><pre><span class="Keyword">template</span> <span class="Identifier">doSomething</span><span class="Other">(</span><span class="Identifier">secs</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span></pre></dt>
@@ -2356,14 +2360,14 @@ returns a colorpalette which can be used to iterate over</pre>
 <dt id="currentLine"><a name="currentLine.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">currentLine</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>currentLine</p>
-<p>simple template to return line number , maybe usefull for debugging </p>
+<p>simple template to return line number , maybe usefull for debugging</p>
 
 
 </dd>
 <dt id="currentLine"><a name="currentLine.t,int"></a><pre><span class="Keyword">template</span> <span class="Identifier">currentLine</span><span class="Other">(</span><span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>currentLine</p>
-<p>simple template to return line number , maybe usefull for debugging </p>
+<p>simple template to return line number , maybe usefull for debugging</p>
 
 
 </dd>
@@ -2385,7 +2389,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-06-28 18:05:48 UTC</small>
+        <small>Made with Nim. Generated: 2018-06-29 12:07:21 UTC</small>
       </div>
     </div>
   </div>
