--- a/cx.html
+++ b/cx.html
@@ -1593,7 +1593,8 @@ Funding     : Here are three excellent reasons :
 <dt id="newColor"><a name="newColor,int,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">newColor</span><span class="Other">(</span><span class="Identifier">r</span><span class="Other">,</span> <span class="Identifier">g</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>newColor</p>
-<p>creates a new color string from r,g,b values passed in colors can be used as foregroundcolor in print,printLn routines and as bgr in cxPrint,cxPrintLn</p>
+<p>creates a new color string from r,g,b values passed in colors can be used as foregroundcolor in print,printLn routines and as bgr in cxPrint,cxPrintLn .</p>
+<p>Example</p>
 <p>import nimcx printLn(&quot;Test for rgb color 12345  &quot; &amp; efb2 * 10,newColor(27354,4763,1089)) decho(2) printLn(&quot;Test for rgb color 12345  &quot; &amp; efb2 * 10,newColor(73547,4873,4888)) decho(2) printLn(&quot;Test for rgb color 12345  &quot; &amp; efb2 * 10,newColor(990,483,38),bgblue) decho(2) cxPrintLn(&quot;Test cxprintln test 12345 &quot; &amp;  efb2 * 10,fontcolor = colBlue,bgr=newcolor(990,5483,38)) cxPrintLn(&quot;Test cxprintln test 12345 &quot; &amp;  efb2 * 10,fontcolor = colBlue,bgr=newcolor(9390,5483,38)) cxPrintLn(&quot;Test cxprintln test 12345 &quot; &amp;  efb2 * 10,fontcolor = colBlue,bgr=newcolor(93900,54830,3800)) decho(2) # or save it let mymystiquecolor = newColor2(93547,84873,77888) printLn(&quot;Here we go&quot;,mymystiquecolor) doFinish()</p>
 
 
@@ -2030,7 +2031,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-08-05 13:47:43 UTC</small>
+        <small>Made with Nim. Generated: 2018-08-05 13:53:48 UTC</small>
       </div>
     </div>
   </div>
