--- a/cxutils.html
+++ b/cxutils.html
@@ -1408,7 +1408,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2018-07-20
+Latest      : 2018-08-02
 
 OS          : Linux
 
@@ -1948,9 +1948,9 @@ reverse iterator<pre class="listing"><span class="Keyword">let</span> <span clas
 <dd>
 <p>getCard</p>
 <p>gets a random card from the Cards seq</p>
-<pre class="listing">import nimcx
-print(getCard(),randCol(),xpos = centerX())  # get card and print in random color at xpos
-doFinish()</pre>
+<pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
+<span class="Identifier">print</span><span class="Punctuation">(</span><span class="Identifier">getCard</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">randCol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="Identifier">centerX</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span>  <span class="Comment"># get card and print in random color at xpos</span>
+<span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="bitCheck"><a name="bitCheck.t,untyped,untyped"></a><pre><span class="Keyword">template</span> <span class="Identifier">bitCheck</span><span class="Other">(</span><span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span></pre></dt>
@@ -2002,7 +2002,7 @@ doFinish()</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-08-05 13:53:50 UTC</small>
+        <small>Made with Nim. Generated: 2018-08-05 14:11:24 UTC</small>
       </div>
     </div>
   </div>
